# HackerRanck

./: CMakeLists.txt  README.md
sources/: CMakeLists.txt
sources/algorithmicCrush/: CMakeLists.txt  main.cpp
sources/algorithmicCrush/testCases/: input1.txt  test case.txt
sources/attendingWorkshops/: CMakeLists.txt  main.cpp
sources/attendingWorkshops/testCases/: sample.txt  sample7.txt
sources/bfsshortreach/: CMakeLists.txt  main.cpp
sources/bfsshortreach/testCases/: testCase.txt
sources/biggerIsGreater/: CMakeLists.txt  main.cpp
sources/biggerIsGreater/testCases/: sample.txt
sources/dijkstrashortreach/: CMakeLists.txt  main.cpp
sources/dijkstrashortreach/testCases/: testCase.txt  testCase2.cpp  testcase2_1.txt
sources/fibonacci-modified/: BigInt.cpp  BigInt.h  CMakeLists.txt  main.cpp
sources/fibonacci-modified/testCases/: output02.txt  output05.txt
sources/isBinairySearchTree/: CMakeLists.txt  main.cpp
sources/isBinairySearchTree/testCases/: sample.txt  testCase11.txt
sources/pairs/: CMakeLists.txt  main.cpp
sources/pairs/testCases/: sample.txt
sources/sparseArrays/: CMakeLists.txt  main.cpp
sources/sparseArrays/testCases/: test case.txt
sources/swapNodeAlgo/: CMakeLists.txt  main.cpp
sources/synchronousShopping/: CMakeLists.txt  main.cpp
sources/synchronousShopping/testCases/: test case.txt
