

#add_subdirectory(algorithmicCrush)
#add_subdirectory(array-pairs)
#add_subdirectory(bfsshortreach)
#add_subdirectory(biggerIsGreater)
#add_subdirectory(dijkstrashortreach)
#add_subdirectory(pairs)
#add_subdirectory(sparseArrays)
add_subdirectory(swapNodeAlgo)
#add_subdirectory(fibonacci-modified)
#add_subdirectory(synchronousShopping)